updated to Catalyst 5.70 fixed layout issues
git-svn-id: svn+ssh://kold.homelinux.com/home/kold/authorwatch@37 388701f2-3217-0410-a608-c2b1fb36d0f3

--- a/root/static/css/global/layout.css
+++ b/root/static/css/global/layout.css
@@ -70,4 +70,5 @@ body {
   clear: both;
   background: #0572C4;
   height: 25px;
+  margin-bottom: 10px;
 }
